fixed heading spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,13 +31,12 @@ h4 {
 
 h5 {
   padding: 8px 0;
-  margin: 20px 0px 5px 0px;
+  margin: 25px 0px 5px 0px;
   font-weight: 600;
-  font-size: 1rem;
+  font-size: 1.2rem;
 }
 
 h6 {
-  padding: 8px 0;
   margin: 0px 0px 10px 0px;
   font-weight: 400;
   font-size: 0.8rem;
